# lumos-challenge

./: .env.example  .gitignore  .pylintrc  Makefile  README.md  app.py  pyproject.toml  requirements.txt  run.sh  test.sh
app/: __init__.py  app.py  app_test.py
app/capabilities/presentation/: capabilities_controller.py  capabilities_routes.py
app/common/domain/: error.py  identifier.py
app/common/domain/__tests__/: error_test.py  identifier_test.py
app/common/infrastructure/: environment_config.py
app/okta/application/: list_users_use_case.py  user_deletion_use_case.py  user_suspention_use_case.py
app/okta/application/__tests__/: list_users_use_case_test.py  user_deletion_use_case.py  user_suspention_use_case_test.py
app/okta/domain/: error.py  user.py
app/okta/domain/__tests__/: error_test.py  user_test.py
app/okta/infrastructure/okta_client/: client.py  common.py
app/okta/presentation/: okta_controller.py  okta_routes.py
app/okta/presentation/__tests__/: okta_controller_test.py
